<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PontoPro</string>

    <!--  Screens Menu-->
    <string name="action_home">Tela principal</string>
    <string name="action_history">Histórico</string>
    <string name="action_settings">Configurações</string>
    
    <!-- History options -->
    <string name="today">Hoje</string>
    <string name="week">Semanal</string>
    <string name="month">Mensal</string>
    <string name="custom">Outros</string>
    
    <string name="checkin">Checkin</string>
    <string name="user_image_status">Status do usuário</string>
    <string name="daily_working_hours">Carga horária</string>
    <string name="daily_goal">Meta diária</string>
    <string name="no_checkins_done">Nenhum checkin realizado</string>
    <string name="zerohour">00:00</string>
    <string name="define_daily_goal">Qual sua meta hoje?</string>
    
    <!--  Settings -->
    <string name="pref_business_hour">Expediente</string>
    <string name="pref_summ_business_hour">Configurações de expediente</string>
    <string name="pref_notification">Notificações</string>
    <string name="pref_summ_notification">Configurações de notificação</string>

    <!-- Notifcation Settings -->
    <string name="in_out_category">Pontos de entrada e saída</string>
    <string name="enable_disable_notification">Habilitar/Desabilitar nofiticações</string>
    <string name="enable_all_notifications">Habilitar todas as notificações</string>
    <string name="disable_all_notifications">Desativar todas as notificações</string>
    <string name="entry_points">Pontos de entrada</string>
    <string name="disable_in_notifications">Desativar lembretes sobre pontos de entradas</string>
    <string name="enable_in_notifications">Ativar lembretes sobre pontos de entradas</string>
    <string name="output_points">Pontos de saida</string>
    <string name="enable_out_notifications">Ativar lembretes sobre pontos de saida</string>
    <string name="disable_out_notifications">Desativar lembretes sobre pontos de saida</string>
    
    <string name="business_daily_goal_category">Expediente e meta diária</string>
    <string name="business_hour_notification">Expediente cumprido</string>
    <string name="enable_business_hour_notifications">Ativar aviso de expediente cumprido</string>
    <string name="disable_business_hour_notifications">Desativar aviso de expediente cumprido</string>
    
    <string name="business_daily__notifications">Tocar mesmo quando houver meta diária</string>
    <string name="business_daily_title">Expediente vs Meta diária</string>

    <string name="daily_notification">Meta diária alcançada</string>
    <string name="enable_dailygoal_notifications">Ativar aviso sobre meta diária alcançada</string>
    <string name="disable_dailygoal_notifications">Desativar aviso sobre meta diária alcançada</string>
    
    <string name="maxhour_notification_category">Limite diário de horas</string>
    <string name="maxhour_notification">Carga horária máxima</string>
    <string name="enable_maxhour_notifications">Avisar 30min antes</string>
    <string name="disable_maxhour_notifications">Desativar aviso sobre limite de horas trabalhas alcançado</string>
    <string name="amount_time_before_notification">Define quando o usuário será notificado</string>
    <string name="notification_precede_time">Antecedência dos avisos</string>




    <!-- Business hour settings -->
    <string name="checkins_time">Horário de batida</string>
    <string name="entered_checkin">Entrada</string>
    <string name="lunch_checkin">Saída para almoço</string>
    <string name="invalid_interval">Intervalo inválido</string>
    <string name="working_time_violation">Sues horários não condizem com seu expediente</string>

    <!-- Array name and values -->
    <string name="never">Nenhum</string>
    <string name="ten_minutes">10 minutos</string>
    <string name="fifteen_minutes">15 minutos</string>
    <string name="thirty_minutes">30 minutos</string>

    <string name="zero_number">0</string>
    <string name="ten_number">10</string>
    <string name="fifteen_number">15</string>
    <string name="thirty_number">30</string>


    <string name="one_hour_value">3600000</string>
    <string name="one_and_half_hour_value">5400000</string>
    <string name="two_hour_value">7200000</string>
    <string name="four_hour_value">14400000</string>
    <string name="six_hour_value">21600000</string>
    <string name="eight_hour_value">28800000</string>
    <string name="twenty_four_hour_value">84600000</string>
    
    <string name="four_hours">Quatros horas</string>
    <string name="six_hours">Seis horas</string>
    <string name="eight_hours">Oito horas</string>
    <string name="eating_time">Intervalo para almoço</string>
    <string name="one_hour">Uma hora</string>
    <string name="one_and_half_hour">Uma hora e meia</string>
    <string name="two_hours">Duas horas</string>
    <string name="after_lunch_checkin">Volta do almoço</string>
    <string name="leaving_checkin">Saída</string>
    <string name="hours">horas</string>
    <string name="test_timefinished">Terminou</string>
    <string name="no_time_selected">Nenhuma meta selecionada</string>
    <string name="generic_settings_error">Sua configuração contém erros. Verifique.</string>


    <!--  Notifications -->
    <string name="gobacktowork_title">Hora de voltar a trabalhar!</string>
    <string name="gobacktowork_message">Veja pelo lado bom, você já compriu boa parte do expediente.</string>
    
    <string name="workday_complete_title">Hora de ir embora!</string>
    <string name="workday_complete_message">Mais um dia de trabalho completo o/</string>
    
    <string name="workingtime_violation_title">Você já trabalhou demais!</string>
    <string name="workingtime_violation_message">Você está prestes a violar a lei trabalhista, portanto hora de ir.</string>
    
    <string name="lunchtime_title">Que tal uma pausa?</string>
    <string name="lunchtime_message">Hora de comer. O que vai ser hoje?</string>
    
     <string name="dailygoal_complete_title">Meta cumprida!</string>
    <string name="dailygoal_complete_message">Hora de aproveitar.</string>
    
    
</resources>
