<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  android:key="pref_category_notification" android:persistent="false">>

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="pref_key_notification_enabled"
        android:summaryOff="@string/enable_all_notifications"
        android:summaryOn="@string/disable_all_notifications"
        android:title="@string/enable_disable_notification" />

    <PreferenceCategory android:title="@string/in_out_category" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:dependency="pref_key_notification_enabled"
            android:key="pref_key_notification_in_enabled"
            android:summaryOff="@string/enable_in_notifications"
            android:summaryOn="@string/disable_in_notifications"
            android:title="@string/entry_points" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:dependency="pref_key_notification_enabled"
            android:key="pref_key_notification_out_enabled"
            android:summaryOff="@string/enable_out_notifications"
            android:summaryOn="@string/disable_out_notifications"
            android:title="@string/output_points" />

        <br.com.androidzin.pontopro.settings.ListPreferenceWithSummary
            android:defaultValue="@string/zero_number"
            android:dependency="pref_key_notification_enabled"
            android:key="pref_time_before_notification"
            android:entries="@array/when_array"
            android:entryValues="@array/when_array_values"
            android:title="@string/notification_precede_time" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/business_daily_goal_category" >
        <CheckBoxPreference
            android:dependency="pref_key_notification_enabled"
            android:defaultValue="true"
            android:key="pref_key_notification_bussineshour_enabled"
            android:summaryOff="@string/enable_business_hour_notifications"
            android:summaryOn="@string/disable_business_hour_notifications"
            android:title="@string/business_hour_notification" />
        <CheckBoxPreference
            android:dependency="pref_key_notification_bussineshour_enabled"
            android:defaultValue="false"
            android:key="pref_key_notification_bussines_daily_enabled"
            android:summary="@string/business_daily__notifications"
            android:title="@string/business_daily_title" />
        <CheckBoxPreference
            android:dependency="pref_key_notification_enabled"
            android:defaultValue="true"
            android:key="pref_key_notification_dailygoal_enabled"
            android:summaryOff="@string/enable_dailygoal_notifications"
            android:summaryOn="@string/disable_dailygoal_notifications"
            android:title="@string/daily_notification" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/maxhour_notification_category">
        <CheckBoxPreference
            android:dependency="pref_key_notification_enabled"
            android:defaultValue="true"
            android:key="pref_key_notification_maxhour_enabled"
            android:summaryOff="@string/enable_maxhour_notifications"
            android:summaryOn="@string/disable_maxhour_notifications"
            android:title="@string/maxhour_notification" />
    </PreferenceCategory>

</PreferenceScreen>