<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/prefs_bussines_hour">

        <br.com.androidzin.pontopro.settings.ListPreferenceWithSummary
                android:defaultValue="@string/eight_number"
                android:key="pref_working_time"
                android:entries="@array/working_time"
                android:entryValues="@array/working_time_values"
                android:title="@string/daily_working_hours" />

        <br.com.androidzin.pontopro.settings.ListPreferenceWithSummary
                android:defaultValue="@string/one_number"
                android:key="pref_eating_time"
                android:entries="@array/eating_time"
                android:entryValues="@array/eating_time_values"
                android:title="@string/eating_time" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/checkins_time">
        <br.com.androidzin.pontopro.settings.TimePreferenceWithSummary
            android:key="pref_entered_checkin"
            android:title="@string/entered_checkin"/>
        <br.com.androidzin.pontopro.settings.TimePreferenceWithSummary
            android:key="pref_lunch_checkin"
            android:title="@string/lunch_checkin"/>
        <br.com.androidzin.pontopro.settings.TimePreferenceWithSummary
            android:key="pref_after_lunch_checkin"
            android:title="@string/after_lunch_checkin"/>
        <br.com.androidzin.pontopro.settings.TimePreferenceWithSummary
            android:key="pref_leaving_checkin"
            android:title="@string/leaving_checkin"/>
    </PreferenceCategory>
</PreferenceScreen>