<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button android:id="@+id/doCheckin"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:text="@string/checkin"        
    />
    
    <TextView android:id="@+id/workStatusText"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/daily_working_hours"
        android:layout_marginLeft="20dip"
        android:layout_centerVertical="true"
    />
    
    <TextView android:id="@+id/workStatusHour"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/zerohour"
        android:layout_marginRight="20dip"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:visibility="invisible"
    />
    
    <ProgressBar android:id="@+id/workStatus"
     	style="?android:attr/progressBarStyleHorizontal"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@id/workStatusText"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        />   
        
    <ImageView android:id="@+id/userStatus"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_above="@id/workStatus"
        android:src="@drawable/have_a_nice_day"
        android:contentDescription="@string/user_image_status"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dip"/>
    
    <TextView android:id="@+id/dailyGoalText"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/daily_goal"
        android:layout_below="@id/workStatus"
        android:layout_marginLeft="20dip"
        android:layout_centerVertical="true"
        android:visibility="invisible"
    />
    
    <TextView android:id="@+id/dailyGoalStatusHour"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/zerohour"
        android:layout_below="@id/workStatus"
        android:layout_marginRight="20dip"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:visibility="invisible"
    />
    
    <ProgressBar android:id="@+id/dailyGoal"
     	style="?android:attr/progressBarStyleHorizontal"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_below="@id/dailyGoalText"
        android:layout_centerVertical="true"
        android:visibility="invisible"/>
        
</RelativeLayout>